# plumbref

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
docs/: agent-usage.md  external-private-repo-validation.md  launch-checklist.md  positioning-and-rerun-diff-implementation-plan.md  private-repo-paired-agent-validation-2026-06-13.md  product-strategy.md  public-safe-validation-story.md  real-workflow-test-results.md  reliance-check-implementation-plan.md  return-to-groundcheck-angle.md  sso-business-rule-drift-demo.md
examples/: .plumbref.toml
examples/benchmark/: README.md
examples/first-run/: README.md  benchmark-and-user-validation.md  codex-live-first-run-2026-06-22.md  mcp-stdio-transcript.md
examples/reports/: README.md  change-impact.md  explanation.md  plumbref-template-loading-demo.md  scenario.md  (+7 more)
groundcheck/: __main__.py  budgets.py  change_context.py  cli.py  config.py  evidence.py  judgments.py  mcp_server.py  models.py  reports.py  search.py  sessions.py
plumbref/: __main__.py  budgets.py  cache.py  change_context.py  checked_claims.py  claim_checks.py  cli.py  config.py  evidence.py  judgments.py  mcp_server.py  models.py  privacy.py  report_diff.py  reports.py  search.py  sessions.py  template_registry.py
reviews/: README.md  run.sh  standalone-harness-plan.md
tests/: test_budgets.py  test_change_context.py  test_checked_claims.py  test_cli_onboarding.py  test_config.py  test_mcp_server.py  test_models.py  test_package_metadata.py  test_report_diff.py  test_reports.py  test_search_and_evidence.py  test_sessions.py  test_templates.py
(+42 files in other folders)
